# Matrix-C-

./: .clang-format  CMakeLists.txt  MatrixC++.cpp
include/: MatrixAllocator.h  MatrixAllocatorStorage.h
src/: main.cpp
